--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -18,21 +18,291 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "94e7180f-0d75-4207-929e-99223efcc27f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pola import DataSet"
+    "from pola import DataSet, MonthEndBalanceTabInfo, PaymentDueTabInfo, PaymentMadeTabInfo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8a8b7272-bb41-495d-aad4-8b4181dc3e0c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>loan_id</th>\n",
+       "      <th>data</th>\n",
+       "      <th>2016-01-31 00:00:00</th>\n",
+       "      <th>2016-02-29 00:00:00</th>\n",
+       "      <th>2016-03-31 00:00:00</th>\n",
+       "      <th>2016-04-30 00:00:00</th>\n",
+       "      <th>2016-05-31 00:00:00</th>\n",
+       "      <th>2016-06-30 00:00:00</th>\n",
+       "      <th>2016-07-31 00:00:00</th>\n",
+       "      <th>2016-08-31 00:00:00</th>\n",
+       "      <th>...</th>\n",
+       "      <th>2022-10-31 00:00:00</th>\n",
+       "      <th>2022-11-30 00:00:00</th>\n",
+       "      <th>2022-12-31 00:00:00</th>\n",
+       "      <th>origination_date</th>\n",
+       "      <th>investor_1_acquisition_date</th>\n",
+       "      <th>reversion_date</th>\n",
+       "      <th>original_balance</th>\n",
+       "      <th>product</th>\n",
+       "      <th>pre_reversion_fixed_rate</th>\n",
+       "      <th>post_reversion_boe_margin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Month End Balance</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2020-12-31</td>\n",
+       "      <td>2020-12-31</td>\n",
+       "      <td>2022-12-31</td>\n",
+       "      <td>150876</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.019881</td>\n",
+       "      <td>0.0375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Payment Made</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020-12-31</td>\n",
+       "      <td>2020-12-31</td>\n",
+       "      <td>2022-12-31</td>\n",
+       "      <td>150876</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.019881</td>\n",
+       "      <td>0.0375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Payment Due</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020-12-31</td>\n",
+       "      <td>2020-12-31</td>\n",
+       "      <td>2022-12-31</td>\n",
+       "      <td>150876</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.019881</td>\n",
+       "      <td>0.0375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Month End Balance</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>103580.0</td>\n",
+       "      <td>103580.0000</td>\n",
+       "      <td>103580.000000</td>\n",
+       "      <td>2020-07-31</td>\n",
+       "      <td>2020-12-31</td>\n",
+       "      <td>2022-07-31</td>\n",
+       "      <td>103580</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.019947</td>\n",
+       "      <td>0.0375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Payment Made</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>517.9</td>\n",
+       "      <td>582.6375</td>\n",
+       "      <td>625.795833</td>\n",
+       "      <td>2020-07-31</td>\n",
+       "      <td>2020-12-31</td>\n",
+       "      <td>2022-07-31</td>\n",
+       "      <td>103580</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.019947</td>\n",
+       "      <td>0.0375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Payment Due</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>517.9</td>\n",
+       "      <td>582.6375</td>\n",
+       "      <td>625.795833</td>\n",
+       "      <td>2020-07-31</td>\n",
+       "      <td>2020-12-31</td>\n",
+       "      <td>2022-07-31</td>\n",
+       "      <td>103580</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.019947</td>\n",
+       "      <td>0.0375</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6 rows × 93 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   loan_id               data  2016-01-31 00:00:00  2016-02-29 00:00:00  \\\n",
+       "0        1  Month End Balance                  NaN                  NaN   \n",
+       "1        1       Payment Made                  NaN                  NaN   \n",
+       "2        1        Payment Due                  NaN                  NaN   \n",
+       "3        2  Month End Balance                  NaN                  NaN   \n",
+       "4        2       Payment Made                  NaN                  NaN   \n",
+       "5        2        Payment Due                  NaN                  NaN   \n",
+       "\n",
+       "   2016-03-31 00:00:00  2016-04-30 00:00:00  2016-05-31 00:00:00  \\\n",
+       "0                  NaN                  NaN                  NaN   \n",
+       "1                  NaN                  NaN                  NaN   \n",
+       "2                  NaN                  NaN                  NaN   \n",
+       "3                  NaN                  NaN                  NaN   \n",
+       "4                  NaN                  NaN                  NaN   \n",
+       "5                  NaN                  NaN                  NaN   \n",
+       "\n",
+       "   2016-06-30 00:00:00  2016-07-31 00:00:00  2016-08-31 00:00:00  ...  \\\n",
+       "0                  NaN                  NaN                  NaN  ...   \n",
+       "1                  NaN                  NaN                  NaN  ...   \n",
+       "2                  NaN                  NaN                  NaN  ...   \n",
+       "3                  NaN                  NaN                  NaN  ...   \n",
+       "4                  NaN                  NaN                  NaN  ...   \n",
+       "5                  NaN                  NaN                  NaN  ...   \n",
+       "\n",
+       "   2022-10-31 00:00:00  2022-11-30 00:00:00  2022-12-31 00:00:00  \\\n",
+       "0                  0.0               0.0000             0.000000   \n",
+       "1                  NaN                  NaN                  NaN   \n",
+       "2                  NaN                  NaN                  NaN   \n",
+       "3             103580.0          103580.0000        103580.000000   \n",
+       "4                517.9             582.6375           625.795833   \n",
+       "5                517.9             582.6375           625.795833   \n",
+       "\n",
+       "   origination_date  investor_1_acquisition_date  reversion_date  \\\n",
+       "0        2020-12-31                   2020-12-31      2022-12-31   \n",
+       "1        2020-12-31                   2020-12-31      2022-12-31   \n",
+       "2        2020-12-31                   2020-12-31      2022-12-31   \n",
+       "3        2020-07-31                   2020-12-31      2022-07-31   \n",
+       "4        2020-07-31                   2020-12-31      2022-07-31   \n",
+       "5        2020-07-31                   2020-12-31      2022-07-31   \n",
+       "\n",
+       "   original_balance  product  pre_reversion_fixed_rate  \\\n",
+       "0            150876        1                  0.019881   \n",
+       "1            150876        1                  0.019881   \n",
+       "2            150876        1                  0.019881   \n",
+       "3            103580        1                  0.019947   \n",
+       "4            103580        1                  0.019947   \n",
+       "5            103580        1                  0.019947   \n",
+       "\n",
+       "   post_reversion_boe_margin  \n",
+       "0                     0.0375  \n",
+       "1                     0.0375  \n",
+       "2                     0.0375  \n",
+       "3                     0.0375  \n",
+       "4                     0.0375  \n",
+       "5                     0.0375  \n",
+       "\n",
+       "[6 rows x 93 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loans_data = DataSet.from_excel(\n",
+    "    path = \"2024 - Strat Casestudy.xlsx\",\n",
+    "    static_tab=\"DATA-Static\",\n",
+    "    data_tabs=[\n",
+    "        MonthEndBalanceTabInfo(\"DATA-Month End Balances\"),\n",
+    "        PaymentDueTabInfo(\"DATA-Payment Due\"),\n",
+    "        PaymentMadeTabInfo(\"DATA-Payment Made\"),\n",
+    "    ],\n",
+    ") \n",
+    "loans_data.data.head(6)"
+   ]
   },
   {
    "cell_type": "code",
